[package]
name = "rustRet"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "mass-spectroscopy analyzer"
homepage = "https://github.com/genomicssport/rustRet"
repository = "https://github.com/genomicssport/rustRet"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
figlet-rs = "0.1.5"
linfa = "0.7.1"
tch = { version = "0.20.0", features = ["download-libtorch"] }
tokio = { version = "1.47.1", features = ["full"] }
